# project-management-tool

./: README.md  pyproject.toml
Frontend/: frontend.py
Resources/: docker-compose.yml
app/: Models.py  app.py  config.py  db.py  schemas.py
app/api/: ai_routes.py  comment_routes.py  project_routes.py  task_routes.py  user_routes.py
app/models/: comment.py  project.py  task.py  user.py
app/repositories/: comment_repository.py  project_repository.py  task_repository.py  user_repository.py
app/schemas/: comment_schema.py  project_schema.py  task_schema.py  user_schema.py
app/services/: ai_service.py  comment_service.py  project_service.py  task_service.py  user_service.py
app/utils/: enums.py
